Updated Version OAuth feature added

--- a/template/shop_app/base.html
+++ b/template/shop_app/base.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}N.S.Rao & Co{% endblock %}</title>
     
+    <!-- Favicon  -->
+    <link rel="icon" type="image/png" href="{% static 'img/android-chrome-192x192.png' %}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -149,7 +152,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{% url 'shop:home' %}">
-                <i class="fas fa-tshirt me-2"></i>N.S.Rao & Co
+                <img src="{% static 'img/android-chrome-192x192.png' %}" alt="Logo" style="height:60px;width:60px;vertical-align:middle;margin-right:8px;">
+                N.S.Rao & Co
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
